--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><link rel="stylesheet" href="/index.c8722558.css"><body> <div id="app"></div> <script type="module" src="/index.fa0df8a9.js"></script> </body></html>
+<!DOCTYPE html><html><link rel="stylesheet" href="index.c8722558.css"><body> <div id="app"></div> <script type="module" src="index.cd19f6b2.js"></script> </body></html>
