--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><link rel="stylesheet" href="index.c8722558.css"><body> <div id="app"></div> <script type="module" src="index.afe24e1d.js"></script> </body></html>
+<!DOCTYPE html><html><link rel="stylesheet" href="index.44a8c3ab.css"><body> <div id="app"></div> <script type="module" src="index.8bc49ee9.js"></script> <script src="https://kit.fontawesome.com/7c59cd50a2.js" crossorigin></script> </body></html>
