--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<!DOCTYPE html><html><link rel="stylesheet" href="index.2b94cbd7.css"><body> <div id="app"></div> <script type="module" src="index.5e3a7ad1.js"></script> <script src="https://kit.fontawesome.com/7c59cd50a2.js" crossorigin></script> </body></html>
+<!DOCTYPE html>
+<html>
+<body>
+  <div id="app"></div>
+  <script type="module" src="js/index.js"></script>
+  <script src="https://kit.fontawesome.com/7c59cd50a2.js" crossorigin="anonymous"></script>  
+</body>
+</html>
