--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
-  <div id="app"></div>
-  <script type="module" src='./index.tsx'></script>
-  <script src="https://kit.fontawesome.com/7c59cd50a2.js" crossorigin="anonymous"></script>  
-</body>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="./index.tsx"></script>
+    <script
+      src="https://kit.fontawesome.com/7c59cd50a2.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
