--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
-  <div id="app"></div>
-  <script type="module" src="js/index.js"></script>
-  <script src="https://kit.fontawesome.com/7c59cd50a2.js" crossorigin="anonymous"></script>  
-</body>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="js/index.js"></script>
+    <link href="js/index.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/7c59cd50a2.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
